WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144726
ToT WebKit crashes while loading ES6 compatibility table
https://bugs.webkit.org/show_bug.cgi?id=144726
Summary
ToT WebKit crashes while loading ES6 compatibility table
Ryosuke Niwa
Reported
2015-05-06 21:23:02 PDT
We shouldn't crash.
Attachments
Fixes the crash
(4.32 KB, patch)
2015-05-06 21:25 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2015-05-06 21:25:33 PDT
Created
attachment 252565
[details]
Fixes the crash
WebKit Commit Bot
Comment 2
2015-05-06 22:17:18 PDT
Comment on
attachment 252565
[details]
Fixes the crash Clearing flags on attachment: 252565 Committed
r183912
: <
http://trac.webkit.org/changeset/183912
>
WebKit Commit Bot
Comment 3
2015-05-06 22:17:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug