ToT WebKit crashes while loading ES6 compatibility table https://bugs.webkit.org/show_bug.cgi?id=144726

Reviewed by Filip Pizlo.

Source/JavaScriptCore:

The bug was caused by parseClass superfluously avoiding to build up the string after seeing {.

Always build the identifier here as it could be a method name.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseClass):

LayoutTests:

Added new test cases.

* js/class-syntax-string-and-numeric-names-expected.txt:
* js/script-tests/class-syntax-string-and-numeric-names.js:


Canonical link: https://commits.webkit.org/162746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183912 268f45cc-cd09-0410-ab3c-d52691b4dbfc